# RAGs

./: README.md  pyproject.toml
RecommendationAgent/: .gitignore  main.py  recommend.py  requirements.txt  ui.py
RecommendationAgent/indexer/: config.py  fetch.py  index.py  storage.py
RecommendationAgent/product_recommendation_faiss_index/: index.faiss  index.pkl
RecommendationAgent/recommender/: agent.py  config.py  filters.py  formatter.py  utils.py
